--- a/AtroposGame/Properties/AndroidManifest.xml
+++ b/AtroposGame/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="AtroposGame.AtroposGame" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="AtroposGame.AtroposGame" android:installLocation="auto" android:versionName="0.5.0" android:versionCode="3">
 	<uses-sdk android:minSdkVersion="21" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -20,7 +20,7 @@
 	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 	<uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
 	<uses-permission android:name="android.permission.CAMERA" />
-	<application android:theme="@android:style/Theme.Holo" android:allowBackup="true" android:label="@string/app_name" android:icon="@drawable/atropos_sigil"></application>
+	<application android:theme="@android:style/Theme.Holo" android:allowBackup="true" android:label="Atropos" android:icon="@drawable/atropos_sigil"></application>
 	<activity android:name=".SplashActivity" android:theme="@style/SplashTheme">
 		<intent-filter>
 			<action android:name="android.intent.action.MAIN" />
